--- a/apps/web/src/components/Shared/Track/index.module.scss
+++ b/apps/web/src/components/Shared/Track/index.module.scss
@@ -6,8 +6,10 @@
   align-items: center;
   justify-content: space-between;
 
+  padding: 0 8px;
+
   &:not(:last-child) {
-    border-bottom: 1px solid gray;
+    border-bottom: 1px solid lightgray;
   }
 }
 
