--- a/apps/web/src/components/Shared/Player/index.module.scss
+++ b/apps/web/src/components/Shared/Player/index.module.scss
@@ -8,7 +8,7 @@
 
   height: var(--player-height);
   border-top: 1px solid lightgray;
-  padding: 0 var(--player-gap);
+  padding: 0 calc(var(--player-gap) / 2);
 
   display: flex;
   flex-direction: row;
@@ -54,6 +54,7 @@
 .Middle {
   flex-direction: column;
   justify-content: center;
+  margin-left: -8rem;
 }
 
 .Right {
