--- a/apps/web/src/components/Shared/Header/index.module.scss
+++ b/apps/web/src/components/Shared/Header/index.module.scss
@@ -18,18 +18,22 @@
 }
 
 .Link {
+  height: 2.25rem;
+  padding: 0 0.85rem;
+  border: 0;
+  border-radius: 9999px;
+
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
 
-  height: 2.25rem;
-  padding: 0 0.85rem;
-  border-radius: 9999px;
-
   color: black;
   font-weight: 500;
   text-decoration: none;
+  background-color: transparent;
+
+  cursor: pointer;
 
   &:hover {
     background-color: rgba(0, 0, 0, 0.125);
