--- a/apps/web/src/features/Header/Link/index.module.scss
+++ b/apps/web/src/features/Header/Link/index.module.scss
@@ -1,23 +1,5 @@
-.Container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.NavContainer {
-  display: flex;
-  flex-direction: row;
-  gap: 1rem;
-
-  height: 40px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  margin-left: -0.75rem;
-  margin-right: -0.75rem;
-}
-
-.Link {
+.Link,
+.LinkHighlighted {
   height: 2.25rem;
   padding: 0 0.85rem;
   border: 0;
@@ -35,7 +17,8 @@
 
   cursor: pointer;
 
-  &:hover {
+  &:hover,
+  &.LinkHighlighted {
     background-color: rgba(0, 0, 0, 0.125);
   }
 }
