--- a/apps/web/src/app/(main)/albums/page.module.scss
+++ b/apps/web/src/app/(main)/albums/page.module.scss
@@ -2,40 +2,7 @@
   margin-bottom: 1.5rem;
 }
 
-.AlbumCard {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-
-  width: 12rem;
-  height: 14.5rem;
-  padding: 0.75rem;
-  border-radius: 0.5rem;
-
-  text-decoration: none;
-  background-color: rgba(0, 0, 0, 0.05);
-
-  &:hover {
-    opacity: 0.9;
-  }
-}
-
-.AlbumName {
-  color: black;
-  font-weight: 700;
-}
-
-.AlbumImage {
-  height: 10.5rem;
-  width: 10.5rem;
-
-  box-shadow: 0 0 16px 1px rgba(0, 0, 0, 0.2);
-
-  border-radius: 0.5rem;
-}
-
-.AlbumGrid {
+.Grid {
   display: grid;
   justify-content: space-between;
   grid-template-columns: 12rem 12rem 12rem 12rem 12rem;
