--- a/apps/web/src/features/Track/Card/index.module.scss
+++ b/apps/web/src/features/Track/Card/index.module.scss
@@ -1,15 +1,62 @@
 .Container {
+  height: 3.25rem;
   width: 100%;
-  height: 3rem;
+  padding: 0 12px;
+
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
 
-  padding: 0 8px;
-
   &:not(:last-child) {
     border-bottom: 1px solid lightgray;
+  }
+
+  & button {
+    width: 1.5rem;
+    border: 0;
+
+    display: none;
+
+    background-color: transparent;
+  }
+
+  & .Number {
+    width: 1.5rem;
+
+    color: gray;
+    text-align: center;
+  }
+
+  &:hover {
+    background-color: rgb(0 0 0 / 0.125);
+
+    & .Number {
+      display: none;
+    }
+
+    & button {
+      display: block;
+    }
+  }
+}
+
+.Name {
+  font-weight: normal;
+  font-size: medium;
+}
+
+.Info {
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+
+  .ArtistList {
+    display: flex;
+    flex-direction: row;
+    gap: 0.2rem;
+
+    font-size: smaller;
   }
 }
 
