--- a/apps/web/src/features/Player/index.module.scss
+++ b/apps/web/src/features/Player/index.module.scss
@@ -27,36 +27,37 @@
   justify-content: left;
   flex-direction: row;
   gap: var(--player-gap);
-
-  .CoverArt {
-    height: calc(var(--player-height) - var(--player-gap));
-    width: calc(var(--player-height) - var(--player-gap));
-    border-radius: 8px;
-  }
-
-  .TextContainer {
-    display: flex;
-    flex-direction: column;
-
-    .SongTitle {
-      color: black;
-      font-weight: 600;
-      text-decoration: none;
-    }
-
-    .ArtistName {
-      color: gray;
-      text-decoration: none;
-    }
-  }
 }
 
 .Middle {
   flex-direction: column;
   justify-content: center;
-  margin-left: -8rem;
 }
 
 .Right {
   justify-content: right;
+}
+
+// Controls
+
+.PlayButton {
+  height: 2.25rem;
+  width: 2.25rem;
+  padding: 0.6rem;
+  border: 0;
+  border-radius: 9999px;
+
+  background-color: rgb(225 225 225);
+}
+
+.Controls {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.ProgressBar {
+  height: 6px;
+  width: 30rem;
+  margin-top: 12px;
 }
